--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.18.1
   flutter_pdfview: ^1.3.1
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.5.1
   path_provider: ^2.1.1
   flutter_bloc: ^8.1.2
   sqflite: ^2.2.0+3
@@ -43,9 +43,20 @@ dependencies:
   webview_flutter: ^4.10.0
   dio: ^5.4.0  # For downloading files
   open_filex: ^4.3.2  # To open the downloaded file
+  connectivity_plus: ^5.0.2
+  get: ^4.6.6
+  flutter_launcher_icons: ^0.14.3
+  url_launcher: ^6.3.1
+  flutter_secure_storage: ^9.2.4
+  logging: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +112,8 @@ flutter:
   # see https://flutter.dev/to/font-from-package
   assets:
     - assets/logo.png
-    - assets/
     - assets/demo.pdf
-    
+    - assets/no_internet.jpg
+    - assets/library_illustration.jpg
+    - assets/library_illustration1.jpg
+    - assets/digital-library.png
