--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_secure_storage: ^9.2.4
   logging: ^1.3.0
+  shimmer: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -117,3 +118,5 @@ flutter:
     - assets/library_illustration.jpg
     - assets/library_illustration1.jpg
     - assets/digital-library.png
+    - assets/EnterKey.jpg
+    - assets/no_list.jpg
